test/test_wrong_return_type_on_init_variable/test_wrong_return_type_on_init_variable.mvs
func a() int {}
let b: bool = a();
